BROKE: Test failing with NoSuchMethodError